--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -7,4 +7,7 @@
   --font-size-l: 24px;
   --font-line-l: 24px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+
+  // Размеры
+  --navbar-height: 50px;
 }
