--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import "src/app/styles/reset";
 @import "src/app/styles/variables/global";
-@import "src/app/styles/themes/normal";
-@import "src/app/styles/themes/dark";
+@import "themes/normal";
+@import "themes/dark";
 
 .app {
   font: var(--font-m);
