--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,21 +1,22 @@
-@import "src/app/styles/reset";
-@import "src/app/styles/variables/global";
+@import "reset";
+@import "variables/global";
 @import "themes/normal";
 @import "themes/dark";
 
 .app {
-  font: var(--font-m);
-  background: var(--bg-color);
-  color: var(--primary-color);
+    font: var(--font-m);
 
-  min-height: 100vh;
+    background: var(--bg-color);
+    color: var(--primary-color);
+
+    min-height: 100vh;
 }
 
 .content-page {
-  display: flex;
+    display: flex;
 }
 
 .page-wrapper {
-  flex-grow: 1;
-  padding: 20px;
+    flex-grow: 1;
+    padding: 20px;
 }
