upgrade sidebar, add button themes

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -16,17 +16,6 @@
 .lang {
     margin-left: 20px;
 }
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-
-    .switchers {
-        flex-direction: column;
-        align-items: center;
-    }
-    .lang {
-        margin-left: 0;
-    }
-}
 
 .collapseBtn {
     position: absolute;
@@ -41,6 +30,34 @@
     flex-direction: column;
 }
 
-.link {
+.item {
     margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.link {
+    margin-left: 10px;
+    opacity: 1;
+}
+
+.icon {
+    fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+    .lang {
+        margin-left: 0;
+    }
+    .link {
+        opacity: 0;
+        transition: 0.2s opacity;
+        width: 0;
+    }
 }
