--- a/src/shared/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ListBox.module.scss
@@ -30,6 +30,23 @@
   opacity: 0.7;
 }
 
-.optionsTop {
-  bottom: 100%;
+.optionsBottomLeft {
+  top: 100%;
+  right: 0;
 }
+
+.optionsBottomRight {
+  top: 100%;
+  left: 0;
+}
+
+.optionsTopLeft {
+  bottom: 100%;
+  right: 0;
+}
+
+.optionsTopRight {
+  bottom: 100%;
+  left: 0;
+}
+
